// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Options should be not edidable 1`] = `
<div class="form-group">
  <label></label>
  <span class="form-text"></span>
</div>
`;

exports[`Options should have a helptext 1`] = `
<div class="form-group">
  <label></label>
  <span class="form-text">Type something</span>
</div>
`;

exports[`Options should have a key 1`] = `
<div class="form-group">
  <label></label>
  <span class="form-text"></span>
</div>
`;

exports[`Options should have a label 1`] = `
<div class="form-group">
  <label>label </label>
  <span class="form-text"></span>
</div>
`;

exports[`Options should have a placeholder 1`] = `
<div class="form-group">
  <label></label>
  <span class="form-text"></span>
</div>
`;

exports[`Options should have a spritemap 1`] = `
<div class="form-group">
  <label></label>
  <span class="form-text"></span>
</div>
`;

exports[`Options should have an id 1`] = `
<div class="form-group">
  <label for="ID"></label>
  <span class="form-text"></span>
</div>
`;

exports[`Options should not be required 1`] = `
<div class="form-group">
  <label></label>
  <span class="form-text"></span>
</div>
`;

exports[`Options should render Label if showLabel is true 1`] = `
<div class="form-group">
  <label>text </label>
  <span class="form-text"></span>
</div>
`;

exports[`Options should render items 1`] = `
<div class="form-group">
  <label></label>
  <div class="field-options">
    <div class="form-group">
      <label></label>
      <input class="form-control" type="text" disabled="disabled" value="label">
      <span class="form-text"></span>
    </div>
    <div class="form-group">
      <label></label>
      <input class="form-control" type="text" disabled="disabled">
      <span class="form-text"></span>
    </div>
  </div>
  <span class="form-text"></span>
</div>
`;

exports[`Options should render no items when items is empty 1`] = `
<div class="form-group">
  <label></label>
  <div class="field-options"></div>
  <span class="form-text"></span>
</div>
`;
